--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,12 @@
 browser=chrome
-url=https://qa.nextbasecrm.com/auth/?backurl=%2Fstream%2F'
-driver_username=hr1@cybertekschool.com
-driver_password=UserUser
+url=https://qa1.vytrack.com
+qa1_url=https://qa1.vytrack.com
+qa2_url=https://qa2.vytrack.com
+qa3_url=https://qa3.vytrack.com
+driver_username=user1
+driver_password=UserUser123
+salesmanager_username=salesmanager120
+salesmanager_password=UserUser123
+storemanager_username=storemanager85
+storemanager_password=UserUser123
 
